--- a/about_us.html
+++ b/about_us.html
@@ -52,7 +52,7 @@
           <!-- secondary -->
           <ul class="navbar-nav navbar-nav-secondary order-lg-3">
             <li class="nav-item">
-              <button id="language-button">IT | EN</button>
+              <button id="language-button" class="nav-link">IT | EN</button>
             </li>
             <li class="nav-item d-lg-none">
               <a class="nav-link nav-icon" href="" role="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -161,7 +161,7 @@
             <a href="/index.html" class="navbar-brand"><img src="/assets/images/logo-light.webp" alt="Not a Design Company logo light"></a>
             <ul class="navbar-nav navbar-nav-secondary order-lg-3">
                 <li class="nav-item">
-                  <button id="language-button2">IT | EN</button>
+                  <button id="language-button2" class="nav-link">IT | EN</button>
                 </li>
                 <li class="nav-item"><a class="nav-link nav-icon" data-bs-toggle="offcanvas" href="#offcanvasNav" role="button" aria-controls="offcanvasNav"><span class="bi bi-list"></span></a></li>
             </ul>
