--- a/about_us_it.html
+++ b/about_us_it.html
@@ -145,7 +145,7 @@
                   Social Networks
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown-4">
-                  <li><a class="dropdown-item" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+                  <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
                   <li><a class="dropdown-item" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
                   <li><a class="dropdown-item" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                   <li><a class="dropdown-item" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
@@ -264,7 +264,7 @@
                           <a class="nav-link fs-4" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Social Networks</a>
                           <div class="collapse" id="menu-2" data-bs-parent="#toc-nav">
                               <ul class="nav nav-minimal nav-minimal-columns">
-                                  <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+                                  <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
                                   <li class="nav-item fs-5"><a class="nav-link" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
                                   <li class="nav-item fs-5"><a class="nav-link" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                                   <li class="nav-item fs-5"><a class="nav-link" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
