--- a/index_it.html
+++ b/index_it.html
@@ -104,7 +104,7 @@
                   <li><a class="dropdown-item" href="./websites/contact/contact.html">Contact</a></li>
                   <li><a class="dropdown-item" href="./websites/contact-location/contact-location.html">Location</a></li>
                   <li><a class="dropdown-item" href="./websites/404/404.html">404</a></li>
-                  <li><a class="dropdown-item" href="./coming-soon.html">Coming Soon</a></li>
+                  <li><a class="dropdown-item" href="./websites/coming-soon/coming-soon.html">Coming Soon</a></li>
                 </ul>
               </li>
               <li class="dropend dropend-hover">
@@ -218,7 +218,7 @@
                                       <li class="nav-item"><a class="nav-link" href="/websites/contact/contact.html">Contact</a></li>
                                       <li class="nav-item"><a class="nav-link" href="/websites/contact-location/contact-location.html">Location</a></li>
                                       <li class="nav-item"><a class="nav-link" href="/websites/404/404.html">404</a></li>
-                                      <li class="nav-item"><a class="nav-link" href="/coming-soon.html">Coming Soon</a></li>
+                                      <li class="nav-item"><a class="nav-link" href="/websites/coming-soon/coming-soon.html">Coming Soon</a></li>
                                   </ul>
                               </div>
                           </li>
@@ -660,8 +660,8 @@
 
           <div class="col-6 col-lg-4 page" style="position: absolute; left: 629.328px; top: 2308.5px;">
             <article class="card card-hover-image-rise">
-              <a href="./websites/coming-soon.html" title="Coming Soon"><img src="./assets/images/coming-soon.webp" class="card-img-top shadow-sm" alt="Portfolio website Not a Design Company - Coming Soon"></a>
-              <a href="./websites/coming-soon.html" class="card-title text-center mt-1">
+              <a href="./websites/coming-soon/coming-soon.html" title="Coming Soon"><img src="./assets/images/coming-soon.webp" class="card-img-top shadow-sm" alt="Portfolio website Not a Design Company - Coming Soon"></a>
+              <a href="./websites/coming-soon/coming-soon.html" class="card-title text-center mt-1">
                 <h4 class="fw-normal fs-6">Coming Soon</h4>
               </a>
             </article>
@@ -774,7 +774,7 @@
       <div class="container">
         <div class="row mb-8">
           <div class="col-lg-10">
-            <h2>Il nostro obbiettivo è creare siti web di <span class="text-primary">altissima qualità </span></h2>
+            <h2>Il nostro obbiettivo è creare siti web di <span class="text-primary">qualità </span></h2>
           </div>
         </div>
         <div class="row g-1 g-lg-3">
@@ -800,7 +800,7 @@
           </div>
           <div class="col-auto">
             <div class="d-flex align-items-center border rounded-pill pe-4">
-              <img src="./assets/images/documentation.svg" class="me-3" alt="Documentation"> Documentazione Dettagliata
+              <img src="./assets/images/documentation.svg" class="me-3" alt="Documentation"> Documentazione
             </div>
           </div>
           <div class="col-auto">
