--- a/about_us_it.html
+++ b/about_us_it.html
@@ -41,11 +41,16 @@
 </head>
 
 <body>
-    <!-- navbar -->
-    <div id="progress">
-        <i class="material-icons notranslate" id="progress-value">arrow_upward</i>
-      </div>
+  <div id="loadingSpinner" class="spinner-container">
+    <div class="spinner"></div>
+    <h5>loading<span data-typed='{"strings": ["..."]}'></span></h5>
+  </div>
+  
+  <div id="progress">
+    <i class="material-icons notranslate" id="progress-value">arrow_upward</i>
+  </div>
     
+      <!-- navbar -->
       <nav class="navbar navbar-expand-lg navbar-sticky navbar-dark" id="navbarpc">
         <div class="container">
           <a href="./index_it.html" class="navbar-brand"><img src="./assets/images/logo-light.webp" alt="Not a Design Company logo light"></a>
