--- a/contact_us.html
+++ b/contact_us.html
@@ -41,6 +41,11 @@
 </head>
 
 <body class="headroom headroom--not-bottom headroom--top" data-aos-easing="ease" data-aos-duration="800" data-aos-delay="0">
+  <div id="loadingSpinner" class="spinner-container">
+    <div class="spinner"></div>
+    <h5>loading<span data-typed='{"strings": ["..."]}'></span></h5>
+  </div>
+  
   <div id="progress">
     <i class="material-icons notranslate" id="progress-value">arrow_upward</i>
   </div>
