--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 </head>
 
 <body class="headroom headroom--not-bottom headroom--top" data-aos-easing="ease" data-aos-duration="800" data-aos-delay="0">
+  <div id="loadingSpinner" class="spinner-container">
+    <div class="spinner"></div>
+    <h5>loading<span data-typed='{"strings": ["..."]}'></span></h5>
+  </div>
+ 
   <div id="progress">
     <i class="material-icons notranslate" id="progress-value">arrow_upward</i>
   </div>
@@ -104,7 +109,7 @@
                   <li><a class="dropdown-item" href="./websites/contact/contact.html">Contact</a></li>
                   <li><a class="dropdown-item" href="./websites/contact-location/contact-location.html">Location</a></li>
                   <li><a class="dropdown-item" href="./websites/404/404.html">404</a></li>
-                  <li><a class="dropdown-item" href="./coming-soon.html">Coming Soon</a></li>
+                  <li><a class="dropdown-item" href="/websites/coming-soon/coming-soon.html">Coming Soon</a></li>
                 </ul>
               </li>
               <li class="dropend dropend-hover">
@@ -662,8 +667,8 @@
 
           <div class="col-6 col-lg-4 page" style="position: absolute; left: 629.328px; top: 2308.5px;">
             <article class="card card-hover-image-rise">
-              <a href="./websites/coming-soon.html" title="Coming Soon"><img src="./assets/images/coming-soon.webp" class="card-img-top shadow-sm" alt="Portfolio website Not a Design Company - Coming Soon"></a>
-              <a href="./websites/coming-soon.html" class="card-title text-center mt-1">
+              <a href="./websites/coming-soon/coming-soon.html" title="Coming Soon"><img src="./assets/images/coming-soon.webp" class="card-img-top shadow-sm" alt="Portfolio website Not a Design Company - Coming Soon"></a>
+              <a href="./websites/coming-soon/coming-soon.html" class="card-title text-center mt-1">
                 <h4 class="fw-normal fs-6">Coming Soon</h4>
               </a>
             </article>
