--- a/privacy.html
+++ b/privacy.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+  <div id="loadingSpinner" class="spinner-container">
+    <div class="spinner"></div>
+    <h5>loading<span data-typed='{"strings": ["..."]}'></span></h5>
+  </div>
+  
   <div id="progress">
     <i class="material-icons notranslate" id="progress-value">arrow_upward</i>
   </div>
