--- a/about_us_it.html
+++ b/about_us_it.html
@@ -430,19 +430,53 @@
             </div>
         </section>
 
-
-        <footer id="footer" class="py-5 py-xl-5 bg-black inverted border-top">
-            <div class="container">
-              <div class="row align-items-center text-muted">
-                <div class="col-6 col-lg-4 text-lg-center order-lg-2"><a href="./index_it.html" class="navbar-brand"><img src="./assets/images/logo-light.webp" alt="Not a Design Company logo light"></a></div>
-                <div class="col-6 col-lg-4 order-lg-1">
-                  <p class="eyebrow">©2023 Not a Design Company</p>
-                </div>
+    <!-- footer -->
+    <footer class="py-15 py-xl-20 border-top bg-black inverted">
+      <div class="container">
+          <div class="row justify-content-between g-5 mb-5 mb-lg-10">
+              <div class="col-lg-5">
+                  <a href="./index.html" class="navbar-brand"><img src="/assets/images/logo-light.webp" alt="Logo"></a>
+                  <p class="mt-3 text pe-lg-5">MAKE WEB DEVELOPMENT FUN AGAIN!</p>
+                  <p class="mt-2 text pe-lg-5">P.IVA 03888521204</p>
               </div>
-            </div>
-          </footer>
-        </div>
-    </div>
+              <div class="col-lg-7">
+                  <div class="row g-3 g-xl-5">
+                      <div class="col-6 col-md-4">
+                          <span class="eyebrow text-muted mb-1 d-flex">Pagine</span>
+                          <ul class="list-unstyled">
+                              <li class="mb-1"><a href="./about_us.html" class="text-reset text-primary-hover">About us</a></li>
+                              <li class="mb-1"><a href="./contact_us.html" class="text-reset text-primary-hover">Contact us</a></li>
+                          </ul>
+                      </div>
+                      <div class="col-6 col-md-4">
+                        <span class="eyebrow text-muted mb-1 d-flex">Documentazione</span>
+                        <ul class="list-unstyled">
+                          <li class="mb-1"><a href="https://status.notadesigncompany.com/" class="text-reset text-primary-hover">Status</a></li>
+                          <li class="mb-1"><a href="https://github.com/Not-a-Design-Company/portfolio" class="text-reset text-primary-hover">GitHub Repository</a></li>
+                        </ul>
+                      </div>
+                      <div class="col-6 col-md-4">
+                          <span class="eyebrow text-muted mb-1 d-flex">Seguici</span>
+                          <ul class="list-unstyled">
+                              <li class="mb-1"><a href="https://www.instagram.com/notadesigncompany/" class="text-reset text-primary-hover">Instagram</a></li>
+                              <li class="mb-1"><a href="https://www.tiktok.com/@not.a.design.company?lang=en" class="text-reset text-primary-hover">TikTok</a></li>
+                              <li class="mb-1"><a href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g" class="text-reset text-primary-hover">Linkedin</a></li>
+                              <li><a href="https://www.linkedin.com/company/98444881/" class="text-reset text-primary-hover">Youtube</a></li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="row align-items-center justify-content-between g-2 g-lg-5">
+              <div class="col-md-6 col-lg-4 order-md-2 text-md-end">
+                  <span class="small text-muted">Proudly based in Val Trompia, Brescia</span>
+              </div>
+              <div class="col-md-6 col-lg-3 order-md-1">
+                  <p class="small text-muted">©2024 NOT A DESIGN COMPANY</p>
+              </div>
+          </div>
+      </div>
+    </footer>
 
     <!-- javascript -->
     <script src="./assets/js/vendor.bundle.js"></script>
