--- a/websites/coworking/coworking.html
+++ b/websites/coworking/coworking.html
@@ -116,7 +116,7 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown-4">
                     <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
-                    <li><a class="dropdown-item" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
+                    <li><a class="dropdown-item" href="https://www.tiktok.com/@notadesigncompany?lang=en">TikTok</a></li>
                     <li><a class="dropdown-item" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                     <li><a class="dropdown-item" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
                   </ul>
@@ -479,7 +479,7 @@
                             <h2 class="h1 my-2">$9</h2>
                             <p class="text-secondary fs-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <div class="d-grid mt-5">
-                                <a href="https://themes.getbootstrap.com/product/cube-multipurpose-template-ui-kit/" class="btn btn-white btn-lg rounded-pill">Buy Now</a>
+                                <a href="" class="btn btn-white btn-lg rounded-pill">Buy Now</a>
                             </div>
                         </div>
                     </div>
@@ -491,7 +491,7 @@
                             <h2 class="h1 my-2">$39</h2>
                             <p class="text-secondary fs-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <div class="d-grid mt-5">
-                                <a href="https://themes.getbootstrap.com/product/cube-multipurpose-template-ui-kit/" class="btn btn-outline-primary btn-lg rounded-pill">Buy Now</a>
+                                <a href="" class="btn btn-outline-primary btn-lg rounded-pill">Buy Now</a>
                             </div>
                         </div>
                     </div>
@@ -503,7 +503,7 @@
                             <h2 class="h1 my-2">$129</h2>
                             <p class="text-secondary fs-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <div class="d-grid mt-5">
-                                <a href="https://themes.getbootstrap.com/product/cube-multipurpose-template-ui-kit/" class="btn btn-outline-primary btn-lg rounded-pill">Buy Now</a>
+                                <a href="" class="btn btn-outline-primary btn-lg rounded-pill">Buy Now</a>
                             </div>
                         </div>
                     </div>
