--- a/it/contact_us/index.html
+++ b/it/contact_us/index.html
@@ -327,7 +327,7 @@
                     <h2>Facciamo qualcosa di grande. <span class="d-block text-primary">Assieme.</span></h2>
                 </div>
                 <div class="col-lg-8" data-aos="fade-up">
-                    <form action="https://formsubmit.co/c6e8f83dc72353c58084cac765b337a4" class="row g-3" method="POST">
+                    <form action="https://form.taxi/s/gsafoqgi" class="row g-3" method="POST">
                       <input type="hidden" name="_subject" value="Nuovo messaggio dal sito Web">
                       <input type="text" name="_honey" style="display:none" method="POST">
                       <input type="hidden" name="_captcha" value="false" method="POST">
