--- a/it/contact_us/index.html
+++ b/it/contact_us/index.html
@@ -151,6 +151,7 @@
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="/it/about_us/" role="button">Chi Siamo</a></li>
+          <li class="nav-item"><a class="nav-link" href="/it/services/" role="button">Servizi</a></li>
           <li class="nav-item"><a class="nav-link" href="/it/contact_us/" role="button">Contattaci</a></li>
           <li class="nav-item dropdown dropdown-hover">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -271,6 +272,7 @@
                       </ul>
                   </div>
                   <li class="nav-item"><a class="nav-link fs-4" href="/it/about_us/" role="button">Chi Siamo</a></li>
+                  <li class="nav-item"><a class="nav-link fs-4" href="/it/services/" role="button">Servizi</a></li>
                   <li class="nav-item"><a class="nav-link fs-4" href="/it/contact_us/" role="button">Contattaci</a></li>
                   <li class="nav-item">
                       <a class="nav-link fs-4" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Social Networks</a>
@@ -367,23 +369,24 @@
               <div class="col-lg-5">
                   <a href="/it/" class="navbar-brand"><img src="/assets/images/logo-light.webp" alt="Logo"></a>
                   <p class="mt-3 text pe-lg-5">MAKE WEB DEVELOPMENT FUN AGAIN!</p>
-                  <p class="mt-2 text pe-lg-5">P.IVA 03888521204</p>
+                  <p class="mt-2 text pe-lg-5">P.IVA 04605080987</p>
               </div>
               <div class="col-lg-7">
                   <div class="row g-3 g-xl-5">
                       <div class="col-6 col-md-4">
                           <span class="eyebrow text-muted mb-1 d-flex">Pagine</span>
                           <ul class="list-unstyled">
-                              <li class="mb-1"><a href="/it/about_us/" class="text-reset text-primary-hover">About us</a></li>
-                              <li class="mb-1"><a href="/it/contact_us/" class="text-reset text-primary-hover">Contact us</a></li>
+                              <li class="mb-1"><a href="/it/about_us/" class="text-reset text-primary-hover">Chi Siamo</a></li>
+                              <li class="mb-1"><a href="/it/contact_us/" class="text-reset text-primary-hover">Contattaci</a></li>
+                              <li class="mb-1"><a href="/it/services/" class="text-reset text-primary-hover">Servizi</a></li>
                           </ul>
                       </div>
                       <div class="col-6 col-md-4">
-                        <span class="eyebrow text-muted mb-1 d-flex">Documentazione</span>
-                        <ul class="list-unstyled">
+                          <span class="eyebrow text-muted mb-1 d-flex">Documentazione</span>
+                          <ul class="list-unstyled">
                           <li class="mb-1"><a href="https://status.notadesigncompany.com/" class="text-reset text-primary-hover">Status</a></li>
                           <li class="mb-1"><a href="https://github.com/Not-a-Design-Company/portfolio" class="text-reset text-primary-hover">GitHub Repository</a></li>
-                        </ul>
+                          </ul>
                       </div>
                       <div class="col-6 col-md-4">
                           <span class="eyebrow text-muted mb-1 d-flex">Seguici</span>
@@ -401,12 +404,12 @@
               <div class="col-md-6 col-lg-4 order-md-2 text-md-end">
                   <span class="small text-muted">Proudly based in Val Trompia, Brescia</span>
               </div>
-              <div class="col-md-6 col-lg-3 order-md-1">
-                  <p class="small text-muted">©2024 NOT A DESIGN COMPANY</p>
+              <div class="col-md-6 col-lg-4 order-md-1">
+                  <p class="small text-muted">©<script>document.write(new Date().getFullYear())</script> NOT A DESIGN COMPANY</p>
               </div>
           </div>
       </div>
-    </footer>
+  </footer>
 
     <!-- javascript -->
     <script src="/assets/js/vendor.bundle.js"></script>
