--- a/en/index.html
+++ b/en/index.html
@@ -148,6 +148,7 @@
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="/en/about_us/" role="button">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="/en/services/" role="button">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="/en/contact_us/" role="button">Contact Us</a></li>
           <li class="nav-item dropdown dropdown-hover">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-6" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -270,6 +271,7 @@
                       </ul>
                   </div>
                   <li class="nav-item"><a class="nav-link fs-4" href="/en/about_us/" role="button">About Us</a></li>
+                  <li class="nav-item"><a class="nav-link fs-4" href="/en/services/" role="button">Services</a></li>
                   <li class="nav-item"><a class="nav-link fs-4" href="/en/contact_us/" role="button">Contact Us</a></li>
                   <li class="nav-item">
                       <a class="nav-link fs-4" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Social Networks</a>
@@ -871,14 +873,14 @@
     </section>
 
 
-    <!-- footer -->
+    <!--footer-->
     <footer class="py-15 py-xl-10 border-top bg-black inverted">
       <div class="container">
           <div class="row justify-content-between g-5 mb-5 mb-lg-10">
               <div class="col-lg-5">
                   <a href="/en/" class="navbar-brand"><img src="/assets/images/logo-light.webp" alt="Logo"></a>
                   <p class="mt-3 text pe-lg-5">MAKE WEB DEVELOPMENT FUN AGAIN!</p>
-                  <p class="mt-2 text pe-lg-5">P.IVA 03888521204</p>
+                  <p class="mt-2 text pe-lg-5">VAT Code 04605080987</p>
               </div>
               <div class="col-lg-7">
                   <div class="row g-3 g-xl-5">
@@ -887,17 +889,18 @@
                           <ul class="list-unstyled">
                               <li class="mb-1"><a href="/en/about_us/" class="text-reset text-primary-hover">About us</a></li>
                               <li class="mb-1"><a href="/en/contact_us/" class="text-reset text-primary-hover">Contact us</a></li>
+                              <li class="mb-1"><a href="/en/services/" class="text-reset text-primary-hover">Services</a></li>
                           </ul>
                       </div>
                       <div class="col-6 col-md-4">
-                        <span class="eyebrow text-muted mb-1 d-flex">Documentation</span>
-                        <ul class="list-unstyled">
+                          <span class="eyebrow text-muted mb-1 d-flex">Documentation</span>
+                          <ul class="list-unstyled">
                           <li class="mb-1"><a href="https://status.notadesigncompany.com/" class="text-reset text-primary-hover">Status</a></li>
                           <li class="mb-1"><a href="https://github.com/Not-a-Design-Company/portfolio" class="text-reset text-primary-hover">GitHub Repository</a></li>
-                        </ul>
+                          </ul>
                       </div>
                       <div class="col-6 col-md-4">
-                          <span class="eyebrow text-muted mb-1 d-flex">Follow us</span>
+                          <span class="eyebrow text-muted mb-1 d-flex">Follow Us</span>
                           <ul class="list-unstyled">
                               <li class="mb-1"><a href="https://www.instagram.com/notadesigncompany/" class="text-reset text-primary-hover">Instagram</a></li>
                               <li class="mb-1"><a href="https://www.tiktok.com/@notadesigncompany" class="text-reset text-primary-hover">TikTok</a></li>
@@ -912,12 +915,12 @@
               <div class="col-md-6 col-lg-4 order-md-2 text-md-end">
                   <span class="small text-muted">Proudly based in Val Trompia, Brescia</span>
               </div>
-              <div class="col-md-6 col-lg-3 order-md-1">
-                  <p class="small text-muted">©2024 NOT A DESIGN COMPANY</p>
+              <div class="col-md-6 col-lg-4 order-md-1">
+                  <p class="small text-muted">©<script>document.write(new Date().getFullYear())</script> NOT A DESIGN COMPANY</p>
               </div>
           </div>
       </div>
-    </footer>
+  </footer>
 
   <!-- javascript -->
   <script src="/assets/js/vendor.bundle.js"></script>
